# Thermal_Reidentification

./: README.md
reid_thermal/: CMakeLists.txt  package.xml
reid_thermal/config/: svmModel_onlyDist_KL-0.02_C-1000_e-0.01_m-4000.svm  trainLabel.csv  trainTDM.csv  trainTDMInfo.csv
reid_thermal/launch/: reid_thermal.launch
reid_thermal/msg/: ReidResult.msg
reid_thermal/src/: main.cpp
